tests/paczka1/small_fuzzy/73041010.err
Error in line 3: P6lioK8b74 S655 85,2
Error in line 8: rsW S617 59,1
